--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,32 +2,10 @@
 
 body {
   background:  linear-gradient(45deg,rgba(232, 70, 70, 1) 0%, rgba(255, 255, 255, 1) 10%, rgb(17, 3, 20) 69%);
-  /* background: radial-gradient(
-  circle at top right,   
-  rgba(232, 70, 70, 1) 0%,
-  rgba(255, 255, 255, 1) 60%, 
-  rgba(81, 44, 92, 1) 80%
-); */
+  width: 100vw;
   margin: 0px;
+  overflow-x: hidden;
   padding: 0px;
   box-sizing: border-box;
-}
-
-
-.fade-container {
-  position: relative;
-  display: inline-block;
-  max-width: 100%;
-}
-
-.fade-text {
-  font-size: 2rem;
-  line-height: 1.5;
-  color: #000;
-  padding: 0 10px;
-  margin: 0;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 80%, rgba(255, 255, 255, 1) 100%);
-  -webkit-background-clip: text;
-  color: transparent;
 }
 
