--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,10 +14,17 @@ body {
   /* background:  linear-gradient(45deg,rgba(232, 70, 70, 1) 0%, rgba(255, 255, 255, 1) 10%, rgb(17, 3, 20) 69%); */
   width: 100vw;
   height: 100vh;
-  background:black;
+  background: black;
   margin: 0px;
   overflow-x: hidden;
   padding: 0px;
   box-sizing: border-box;
 }
 
+.profileDropdown {
+  background-color: white;
+  border-radius: 20px;
+  padding: 12px;
+  position: relative;
+  top: 62px;
+}
