--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -18,6 +18,7 @@
   transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   /* border-right: 1px solid #e5e7eb; */
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+  /* background-color: #003747; */
 }
 
 .sidebar-container.sidebar-hidden {
