--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,3 +78,11 @@ body {
     background-position: -200% 0, -100% 100%;
   }
 }
+
+.data-circle {
+  border-radius: 100%;
+  color: white;
+  height: 150px;
+  background-color: white;
+  width: 151px;
+}
